name:                 houndell
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             https://github.com/dtrsan/houndell/wiki
author:               Domagoj Tršan
maintainer:           domagoj.trsan@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable houndell
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        aeson >= 0.11.2.0 && < 0.12,
                        bytestring >= 0.10.6,
                        containers >= 0.5.6,
                        exceptions >= 0.8.2.1 && < 0.9,
                        formatting >= 6.2.2 && < 7,
                        http-client >=  0.4.28 && < 0.5,
                        http-types >=  0.9 && < 0.10,
                        optparse-applicative >= 0.12.1.0 && < 0.13,
                        text >= 1.2.2.1 && < 1.3
  hs-source-dirs:       src
  default-language:     Haskell2010
